# student_evaluation_ML_project_ECR_deployment

./: .gitignore  Dockerfile  README.md  application.py  pyproject.toml  requirements.txt
.github/workflows/: aws.yaml
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
templates/: home.html
